--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/service-page-style.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/blog.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/loader.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/service.css" />
   <title>React App</title>
 </head>
 
