--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/blog.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/loader.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/service.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/404-styles.css" />
   <title>React App</title>
 </head>
 
