--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/loader.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/service.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/404-styles.css" />
-  <title>React App</title>
+  <title>Dream Travel</title>
 </head>
 
 <body>
