--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/loader.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/service.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/404-styles.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/profile.css" />
   <title>Dream Travel</title>
 </head>
 
